wrap plack with middleware to redirect ssl to http

--- a/dist.ini
+++ b/dist.ini
@@ -65,6 +65,8 @@ URI = 1.60
 version = 0.96
 Starman = 0
 HTML::Parser = 3.71
+Plack::Builder = 0
+Plack::Middleware::RedirectSSL = 1.001
 
 [Prereqs / TestRequires]
 Test::More = 0.98
